# SOC-Portfolio

SOClog/: README.md  pyproject.toml  requirements.txt
SOClog/debian/: changelog  control  rules
SOClog/docs/: kali_install.md  usage.md  windows_setup.md
SOClog/examples/: hosts_example.yaml
SOClog/soclog/: cli.py  collectors.py  integrity.py  windows_remote.py
phishing/: README.md
phishing/analysis/: analysis_notes.md  iocs.md
phishing/email/: headers.txt  phishing_email.md
phishing/report/: phishing_incident_report.md
soclog/: __init__.py  cli.py  config.py  windows_remote.py
